--- a/maideasy.html
+++ b/maideasy.html
@@ -1,19 +1,32 @@
 <!DOCTYPE html>
 <html lang = "en">
-	<link href="navbar.css" rel="stylesheet">
 	<head>
 		<title>MaidEasy</title>
+		<!-- ICON -->
 		<link href = "img/cleaning.png" rel = "icon">
+
+		<!-- NAVBAR STYLESHEET -->
+		<link href="navbar.css" rel="stylesheet">
 	</head>
 	<body>
 		<nav>
 			<div class = "topnav">
-				<a class = "active nav-element" href="#home">HOME</a>
+				<div class = "space">""</div>
+				<a class = "name" href="#home">MaidEasy</a>
+				<div class = "space2">""</div>
+				<a class = "nav-element current" href="#home">HOME</a>
 				<a class = "nav-element" href="#about">ABOUT US</a>
 				<a class = "nav-element" href="#services">SERVICES</a>
 				<a class = "nav-element" href="#register">REGISTER</a>
 				<a class = "nav-element" href="#contact">CONTACT US</a>
+				<div class = "space">""</div>
 			</div>
 		</nav>
+
+		<!-- HOME PAGE -->
+		<!-- <div id = "home">
+			<button id = "rounded"
+		</div> -->
 	</body>
 </html>
+
