Replaced unnecessary quotes with a space

--- a/maideasy.html
+++ b/maideasy.html
@@ -11,15 +11,15 @@
 	<body>
 		<nav>
 			<div class = "topnav">
-				<div class = "space">""</div>
+				<div class = "space"> </div>
 				<a class = "name" href="#home">MaidEasy</a>
-				<div class = "space2">""</div>
+				<div class = "space2"> </div>
 				<a class = "nav-element current" href="#home">HOME</a>
 				<a class = "nav-element" href="#about">ABOUT US</a>
 				<a class = "nav-element" href="#services">SERVICES</a>
 				<a class = "nav-element" href="#register">REGISTER</a>
 				<a class = "nav-element" href="#contact">CONTACT US</a>
-				<div class = "space">""</div>
+				<div class = "space"> </div>
 			</div>
 		</nav>
 
