Added folder structure

--- a/maideasy.html
+++ b/maideasy.html
@@ -8,9 +8,9 @@
 		<!-- NAVBAR STYLESHEET -->
 		<link href="navbar.css" rel="stylesheet">
     </head>
-    <link href="bootstrap.min.css" rel="stylesheet"> 
-    <script src="jquery.slim.min.js"></script> 
-    <script src="bootstrap.bundle.min.js"></script> 
+    <link href="lib/bootstrap.min.css" rel="stylesheet"> 
+    <script src="lib/jquery.slim.min.js"></script> 
+    <script src="lib/bootstrap.bundle.min.js"></script> 
 	<body>
         <nav class="navbar navbar-expand-lg navbar-light shadow fixed-top" style = "background-color:green">
             <div class="container" >
