--- a/maideasy.html
+++ b/maideasy.html
@@ -12,31 +12,31 @@
     <script src="lib/jquery.slim.min.js"></script> 
     <script src="lib/bootstrap.bundle.min.js"></script> 
 	<body>
-        <nav class="navbar navbar-expand-lg navbar-light shadow fixed-top" style = "background-color:green">
+        <nav class="navbar navbar-expand-lg navbar-light shadow fixed-top" style = "background-color:transparent">
             <div class="container" >
                 <a class="navbar-brand" href="#">Maid Easy</a>
-                    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+                    <button class="navbar-toggler navbar-dark" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
                     </button>
                     <div class="collapse navbar-collapse" id="navbarResponsive">
                         <ul class="navbar-nav ml-auto">
                         <li class="nav-element current">
-                            <a class="nav-link2 nav-link" href="#">Home
+                            <a class="nav-link" href="#">Home
                                 <span class="sr-only">(current)</span>
                             </a>
                         </li>
                         <div class = "space" style = "color: black;">&nbsp</div>
                         <li class="nav-element">
-                            <a class="nav-link2 nav-link" href="#">About</a>
+                            <a class="nav-link" href="#">About</a>
                         </li>
                         <li class="nav-element">
-                            <a class="nav-link2 nav-link" href="#">Services</a>
+                            <a class="nav-link" href="#">Services</a>
                         </li>
                         <li class="nav-element">
-                            <a class="nav-link2 nav-link" href="#">Register</a>
+                            <a class="nav-link" href="#">Register</a>
                         </li>
                         <li class="nav-element">
-                            <a class="nav-link2 nav-link" href="#">Contact</a>
+                            <a class="nav-link" href="#">Contact</a>
                         </li>
                         </ul>
                     </div>
