--- a/maideasy.html
+++ b/maideasy.html
@@ -14,7 +14,7 @@
 	<body>
         <nav class="navbar navbar-expand-lg navbar-light shadow fixed-top" style = "background-color:transparent">
             <div class="container" >
-                <a class="navbar-brand" href="#">Maid Easy</a>
+                <a class="navbar-brand" href="#home">Maid Easy</a>
                     <button class="navbar-toggler navbar-dark" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
                     </button>
@@ -25,18 +25,21 @@
                                 <span class="sr-only">(current)</span>
                             </a>
                         </li>
-                        <div class = "space" style = "color: black;">&nbsp</div>
+                        <div class = "space" style = "color:transparent;">&nbsp</div>
                         <li class="nav-element">
-                            <a class="nav-link" href="#">About</a>
+                            <a class="nav-link" href="#about">About</a>
                         </li>
+                        <div class = "space" style = "color:transparent;">&nbsp</div>
                         <li class="nav-element">
-                            <a class="nav-link" href="#">Services</a>
+                            <a class="nav-link" href="#services">Services</a>
                         </li>
+                        <div class = "space" style = "color:transparent;">&nbsp</div>
                         <li class="nav-element">
-                            <a class="nav-link" href="#">Register</a>
+                            <a class="nav-link" href="#register">Register</a>
                         </li>
+                        <div class = "space" style = "color:transparent;">&nbsp</div>
                         <li class="nav-element">
-                            <a class="nav-link" href="#">Contact</a>
+                            <a class="nav-link" href="#contact">Contact</a>
                         </li>
                         </ul>
                     </div>
