Created css folder, Removed Home extra space

--- a/maideasy.html
+++ b/maideasy.html
@@ -6,7 +6,7 @@
 		<link href = "img/cleaning.png" rel = "icon">
 
 		<!-- NAVBAR STYLESHEET -->
-		<link href="navbar.css" rel="stylesheet">
+		<link href="css/navbar.css" rel="stylesheet">
     </head>
     <link href="lib/bootstrap.min.css" rel="stylesheet"> 
     <script src="lib/jquery.slim.min.js"></script> 
