--- a/maideasy.html
+++ b/maideasy.html
@@ -3,14 +3,15 @@
 	<head>
 		<title>MaidEasy</title>
 		<!-- ICON -->
-		<link href = "img/cleaning.png" rel = "icon">
+		<link href = "img/cleaning.png" rel = "icon"/>
 
 		<!-- NAVBAR STYLESHEET -->
-		<link href="css/navbar.css" rel="stylesheet">
+		<link href="css/navbar.css" rel="stylesheet"/>
+    
+        <link href="lib/bootstrap.min.css" rel="stylesheet"/> 
+        <script src="lib/jquery.slim.min.js"></script> 
+        <script src="lib/bootstrap.bundle.min.js"></script> 
     </head>
-    <link href="lib/bootstrap.min.css" rel="stylesheet"> 
-    <script src="lib/jquery.slim.min.js"></script> 
-    <script src="lib/bootstrap.bundle.min.js"></script> 
 	<body>
         <nav class="navbar navbar-expand-lg navbar-light shadow fixed-top" style = "background-color:transparent">
             <div class="container" >
@@ -56,6 +57,18 @@
 		<!-- HOME PAGE -->
 		<!-- <div id = "home">
 			<button id = "rounded"
-		</div> -->
+        </div> -->
+        
+        <!--<br><br><br><br>
+        <p id="my-type-write">Check </p>
+        <script>
+            var txt=document.getElementById("my-type-write");
+            txt.innerHTML+="H"; setTimeout(()=>{console.log("In dummy fn");},5000);
+            txt=document.getElementById("my-type-write");
+            txt.innerHTML+="e"; setTimeout(()=>{console.log("In dummy fn");},2000);
+            txt=document.getElementById("my-type-write");
+            txt.innerHTML+="l"; setTimeout(()=>{console.log("In dummy fn");},2000);
+
+        </script>   -->
 	</body>
 </html>
