--- a/maideasy.html
+++ b/maideasy.html
@@ -6,7 +6,7 @@
 		<link href = "img/cleaning.png" rel = "icon"/>
 
 		<!-- NAVBAR STYLESHEET -->
-		<link href="css/navbar.css" rel="stylesheet"/>
+		<link href="./css/navbar.css" rel="stylesheet"/>
     
         <link href="lib/bootstrap.min.css" rel="stylesheet"/> 
         <script src="lib/jquery.slim.min.js"></script> 
