--- a/maideasy.html
+++ b/maideasy.html
@@ -12,10 +12,10 @@
     </head>
 	<body>
         <div>
-            <nav class="navbar navbar-expand-lg navbar-light shadow fixed-top" style = "background-color:transparent">
+            <nav id = "navbar" class="navbar navbar-expand-lg navbar-light shadow fixed-top" style = "background-color:transparent">
                 <div class="container" >
                     <a class="navbar-brand" href="#home">Maid Easy</a>
-                        <button class="navbar-toggler navbar-dark" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+                        <button id = "navbar-ham" class="navbar-toggler navbar-dark" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
                             <span class="navbar-toggler-icon"></span>
                         </button>
                         <div class="collapse navbar-collapse" id="navbarResponsive">
@@ -83,4 +83,5 @@
     <script src="lib/jquery.slim.min.js"></script> 
     <script src="lib/bootstrap.bundle.min.js"></script>
     <script src="lib/active-block.js"></script>
+    <script src="lib/navbar.js"></script>
 </html>
