Parallax added to about us: background image subject to change

--- a/maideasy.html
+++ b/maideasy.html
@@ -8,7 +8,8 @@
 		<!-- NAVBAR STYLESHEET -->
         <link href="./css/navbar.css" rel="stylesheet"/>
         <link href="./css/home.css" rel="stylesheet"/>
-        <link href="lib/bootstrap.min.css" rel="stylesheet"/> 
+        <link href="lib/bootstrap.min.css" rel="stylesheet"/>
+        <link href="./css/about.css" rel="stylesheet"/> 
     </head>
 	<body>
         <div>
@@ -62,7 +63,7 @@
         </div>
         <!-- End of Home -->
 
-        <div class = "block" id = "about">
+        <div class = "block parallax" id = "about">
             <!-- TODO -->
         </div>
 
