--- a/maideasy.html
+++ b/maideasy.html
@@ -64,7 +64,9 @@
         <!-- End of Home -->
 
         <div class = "block parallax" id = "about">
-            <!-- TODO -->
+            <div align = "center"  style="height:400px;background-color:rgba(255, 115, 0, 0.479);font-size:16px;margin-block-start: 200px;">
+                <b><h5 align = "left" style="color:white; font-family:montserrat;margin-inline-start: 215px;margin-block-top:50px" >ABOUT US</h5></b>
+            </div>
         </div>
 
         <div class = "block" id = "services">
