--- a/maideasy.html
+++ b/maideasy.html
@@ -63,10 +63,25 @@
         </div>
         <!-- End of Home -->
 
-        <div class = "block parallax" id = "about">
-            <div align = "center"  style="height:400px;background-color:rgba(255, 115, 0, 0.479);font-size:16px;margin-block-start: 200px;">
-                <b><h5 align = "left" style="color:white; font-family:montserrat;margin-inline-start: 215px;margin-block-top:50px" >ABOUT US</h5></b>
+        <div class = "block parallax block1" id = "about">
+
+            <!-- <div align = "center"  style="height:400px;background-color:rgba(255, 115, 0, 0.479);font-size:16px;margin-block-start: 200px;">
+                <b><h5 align = "left" style="color:white; font-family:montserrat;margin-inline-start: 215px;" >ABOUT US</h5></b>
+            </div> -->
+            <div class = "row1">&nbsp;</div>
+            <div class = "outer">
+                <div class = "row1">
+                    <div class ="column1">
+                        <p>About Us text</p>
+                    </div>
+                    <div class ="column1">
+                        <p>image gonna go up here</p>        
+                    </div>
+                </div>
             </div>
+            <div class = "row1">&nbsp;</div>
+
+
         </div>
 
         <div class = "block" id = "services">
