--- a/maideasy.html
+++ b/maideasy.html
@@ -132,7 +132,8 @@
                 </form>
             </div>
             <div class = "space-contact2">&nbsp</div>
-            <div class = "image-box"> </div>
+            <!-- GOOGLE MAP LOCTAION OF COLLEGE -->
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3888.5831053856305!2d77.53232771477025!3d12.934494790880208!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3bae3e468d8d36d3%3A0x694d74f6ac640acf!2sPES%20University!5e0!3m2!1sen!2sin!4v1571836525650!5m2!1sen!2sin"></iframe>
             <div class = "space-contact2">&nbsp</div>
         </div>
     </body>
