Added contact background

--- a/maideasy.html
+++ b/maideasy.html
@@ -92,49 +92,50 @@
         <div class = "block" id = "register">
             <!-- TODO -->
         </div>
-
-        <div class = "block" id = "contact" style="color: white;">
-            <div class = "space-contact">&nbsp</div>
-            <div class = "contact-container">
-                <div id = "title" >CONTACT US</div>
-                <div>&nbsp</div>
-                <form id = "contact-form">
-                    <div id = "contact-fields">
-                        <div class = "fields">
-                            <div>NAME</div>
-                            <div>&nbsp</div>
-                            <div>EMAIL ID</div>
-                            <div>&nbsp</div>
-                            <div>SUBJECT</div>
-                            <div>&nbsp</div>
-                            <div>NEW COMMUNITY</div>
-                        </div>
-                        <div class = "inputs">
-                            <input class = "input-box" type="text" name="name">
-                            <div>&nbsp</div>
-                            <input class = "input-box" type="text" name="email">
-                            <div>&nbsp</div>
-                            <input class = "input-box" type="text" name="subject">
-                            <div>&nbsp</div>
-                            <div>
-                                YES <input class = "rad" type="radio" name = "new-community" value="yes" checked> 
-                                &nbsp &nbsp
-                                NO  <input class = "rad" type="radio" name = "new-community" value="no">
+        <div class = "contact-bg">
+            <div class = "block" id = "contact" style="color: white;">
+                <div class = "space-contact">&nbsp</div>
+                <div class = "contact-container">
+                    <div id = "title" >CONTACT US</div>
+                    <div>&nbsp</div>
+                    <form id = "contact-form">
+                        <div id = "contact-fields">
+                            <div class = "fields">
+                                <div>NAME</div>
+                                <div>&nbsp</div>
+                                <div>EMAIL ID</div>
+                                <div>&nbsp</div>
+                                <div>SUBJECT</div>
+                                <div>&nbsp</div>
+                                <div>NEW COMMUNITY</div>
+                            </div>
+                            <div class = "inputs">
+                                <input class = "input-box" type="text" name="name">
+                                <div>&nbsp</div>
+                                <input class = "input-box" type="text" name="email">
+                                <div>&nbsp</div>
+                                <input class = "input-box" type="text" name="subject">
+                                <div>&nbsp</div>
+                                <div>
+                                    YES <input class = "rad" type="radio" name = "new-community" value="yes" checked> 
+                                    &nbsp &nbsp
+                                    NO  <input class = "rad" type="radio" name = "new-community" value="no">
+                                </div>
                             </div>
                         </div>
-                    </div>
-                    <br>
-                    <textarea id = "message" placeholder="Enter Message Here..."></textarea>
-                    <br><br>
-                    <div align = "center">
-                        <input id = "message-submit" type="submit" value="Submit">
-                    </div>
-                </form>
+                        <br>
+                        <textarea id = "message" placeholder="Enter Message Here..."></textarea>
+                        <br><br>
+                        <div align = "center">
+                            <input id = "message-submit" type="submit" value="Submit">
+                        </div>
+                    </form>
+                </div>
+                <div class = "space-contact2">&nbsp</div>
+                <!-- GOOGLE MAP LOCTAION OF COLLEGE -->
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3888.5831053856305!2d77.53232771477025!3d12.934494790880208!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3bae3e468d8d36d3%3A0x694d74f6ac640acf!2sPES%20University!5e0!3m2!1sen!2sin!4v1571836525650!5m2!1sen!2sin"></iframe>
+                <div class = "space-contact2">&nbsp</div>
             </div>
-            <div class = "space-contact2">&nbsp</div>
-            <!-- GOOGLE MAP LOCTAION OF COLLEGE -->
-            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3888.5831053856305!2d77.53232771477025!3d12.934494790880208!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3bae3e468d8d36d3%3A0x694d74f6ac640acf!2sPES%20University!5e0!3m2!1sen!2sin!4v1571836525650!5m2!1sen!2sin"></iframe>
-            <div class = "space-contact2">&nbsp</div>
         </div>
     </body>
     
