Added more dropdown

--- a/maideasy.html
+++ b/maideasy.html
@@ -44,9 +44,15 @@
                                 <a class="nav-link" href="#contact">Contact</a>
                             </li>
                             <div class = "space" style = "color:transparent;">&nbsp</div>
-                            <li class = "nav-element Drops">
-                                <a class="nav-link" href = "#more">More</a>
-                            </li>
+                            <li class="nav-item dropdown nav-element" id="more">
+                                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                  More
+                                </a>
+                                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                                  <a class="dropdown-item nav-element" id="loginButton" style="color: white" href="#login">Login</a>
+                                  <a class="dropdown-item nav-element" id="signupButton" style="color: white" href="#signup">Sign Up</a>
+                                </div>
+                              </li>
                             </ul>
                         </div>
                 </div>
