Typewriting effect completed, Made the title icon b/w; Direct commit to master

--- a/maideasy.html
+++ b/maideasy.html
@@ -3,7 +3,7 @@
 	<head>
 		<title>MaidEasy</title>
 		<!-- ICON -->
-		<link href = "img/cleaning.png" rel = "icon"/>
+		<link href = "img/cleaning-ConvertImage.png" rel = "icon"/>
 
 		<!-- NAVBAR STYLESHEET -->
         <link href="./css/navbar.css" rel="stylesheet"/>
@@ -62,9 +62,13 @@
         <!-- Home -->
         <div class = "block" id="home">
             <div class="home-container">
-              <h1>Maid Easy</h1>
-              <a href="#about" class="btn-get-started">Get Started</a>
-              <h2>PES UNIVERSITY</h2>
+                <h1>Maid Easy</h1>
+                <a href="#about" class="btn-get-started">Get Started</a>
+                <h2>
+                    <a href="" class="typewrite type" data-period="2000" data-type='[ "Washing", "Dusting", "Cleaning", "Sweeping" ]'>
+                        <span class="wrap"></span>
+                    </a>
+                </h2>
               
             </div>
         </div>
@@ -75,6 +79,7 @@
             <!-- <div align = "center"  style="height:400px;background-color:rgba(255, 115, 0, 0.479);font-size:16px;margin-block-start: 200px;">
                 <b><h5 align = "left" style="color:white; font-family:montserrat;margin-inline-start: 215px;" >ABOUT US</h5></b>
             </div> -->
+            <meta name="viewport" content="width=device-width, initial-scale=1.0">
             <div class = "row1">&nbsp;</div>
             <div class = "outer">
                 <div class = "row1">
@@ -150,4 +155,5 @@
     <script src="lib/bootstrap.bundle.min.js"></script>
     <script src="lib/active-block.js"></script>
     <script src="lib/navbar.js"></script>
+    <script src="lib/type.js"></script>
 </html>
