--- a/maideasy.html
+++ b/maideasy.html
@@ -111,44 +111,53 @@
                      
                 </div> -->
             <div class="services-container">
-                <div class="flipCard"> 
-                    <div class="card" onclick="this.classList.toggle('flipped');"> 
-                        <div class="side front">
+                <div class="flip-card"> 
+                    <div class="flip-card-inner">
+                        <div class="flip-card-front">
                             <div class="image-container" >
                                 <img src="img/cleaning.jpg" alt="To be added" class="services-imgs" />
                                 <br><br><h2>CLEANING</h2>
                             </div>
                         </div> 
-                        <div class="side back">Definition<br/>
-                            Explanation
+                        <div class="flip-card-back">
+                            <br>Add text here<br>
+                            <div class="btn-container">
+                                <button class="booknow">BOOK NOW</button>
+                            </div>
                         </div> 
                     </div> 
                 </div>
                 <div class = "space-contact">&nbsp</div>
-                <div class="flipCard"> 
-                    <div class="card" onclick="this.classList.toggle('flipped');"> 
-                        <div class="side front">
+                <div class="flip-card"> 
+                    <div class="flip-card-inner">
+                        <div class="flip-card-front">
                             <div class="image-container" >
                                 <img src="img/cooking.jpg" alt="To be added" class="services-imgs" />
                                 <br><br><h2>COOKING</h2>
                             </div>
                         </div> 
-                        <div class="side back">Definition<br/>
-                            Explanation
+                        <div class="flip-card-back">
+                            <br>Add text here<br>
+                            <div class="btn-container">
+                                <button class="booknow">BOOK NOW</button>
+                            </div>
                         </div> 
                     </div> 
                 </div>
                 <div class = "space-contact">&nbsp</div>
-                <div class="flipCard"> 
-                    <div class="card" onclick="this.classList.toggle('flipped');"> 
-                        <div class="side front">
+                <div class="flip-card"> 
+                    <div class="flip-card-inner">
+                        <div class="flip-card-front">
                             <div class="image-container" >
                                 <img src="img/washing.jpg" alt="To be added" class="services-imgs" />
                                 <br><br><h2>WASHING</h2>
                             </div>
                         </div> 
-                        <div class="side back">Definition<br/>
-                            Explanation
+                        <div class="flip-card-back">
+                            <br>Add text here<br>
+                            <div class="btn-container">
+                                <button class="booknow">BOOK NOW</button>
+                            </div>
                         </div> 
                     </div> 
                 </div>
