Added Signup page

--- a/maideasy.html
+++ b/maideasy.html
@@ -12,6 +12,7 @@
         <link href="./css/about.css" rel="stylesheet"/> 
         <link href="./css/contact.css" rel="stylesheet"/>
         <link href="./css/services.css" rel="stylesheet"/>
+        <link href="./css/signup.css" rel="stylesheet"/>   <!--used for both signup and register-->
     </head>
 	<body>
         <div>
@@ -136,6 +137,24 @@
 
         <div class = "block" id = "register">
             <!-- TODO -->
+            <br><br><br>
+            <div class="input-img">
+                <img src="./test.jpg" alt="Add image here">
+                <br><br><br>
+                <h2 class="heading">REGISTER</h2>
+                <br><br>
+                <div class="input-fields">
+                    <label for ="name" class="labels">NAME  </label><input type="text" id="name"><br><br><br>
+                    <label for ="email"class="labels">EMAIL </label><input type="email" id="email"><br><br><br>
+                    <label for ="type" class="labels"> TYPE </label><input type="text" id="type"><br><br>
+                </div>  
+                <br><br><br><br>
+                <div >
+                    <button type="submit" id="register-button">
+                        Submit
+                    </button>
+                </div>
+            </div>
         </div>
         <div class = "contact-bg">
             <div class = "block" id = "contact" style="color: white;">
