Fixed dropdown menu

--- a/login.html
+++ b/login.html
@@ -76,4 +76,10 @@
 			</div>
 		</div>	
 	</body>
+	<!-- SCRIPTS -->
+    <script src="lib/jquery.slim.min.js"></script> 
+    <script src="lib/bootstrap.bundle.min.js"></script>
+    <script src="lib/active-block.js"></script>
+    <script src="lib/navbar.js"></script>
+    <script src="lib/type.js"></script>
 </html>
