--- a/signup.html
+++ b/signup.html
@@ -12,7 +12,6 @@
         <link href="./css/contact.css" rel="stylesheet"/>
         <link href="./css/services.css" rel="stylesheet"/>
         <link href="./css/signup.css" rel="stylesheet"/>
-        <!--<link href="mynavbar.css" rel="stylesheet">  -->
     </head>
     <body>
         <div>
@@ -88,4 +87,10 @@
             </div>
         </div>  
     </body>
+    <!-- SCRIPTS -->
+    <script src="lib/jquery.slim.min.js"></script> 
+    <script src="lib/bootstrap.bundle.min.js"></script>
+    <script src="lib/active-block.js"></script>
+    <script src="lib/navbar.js"></script>
+    <script src="lib/type.js"></script>
 </html>
