Fixed alignment in services page

--- a/maideasy.html
+++ b/maideasy.html
@@ -100,14 +100,15 @@
 
         <div class = "block" id = "services">
             <!-- TODO -->
-            <!-- <br><br><br><h2>SERVICES</h2>  -->
+            <br><br><br><br>
             <div class="services-container">
                 <div class="card-container">
                     <div class="image-container" >
-                            <img src="img/cleaning.jpg" alt="To be added" class="services-imgs" />
-                            <br><br><h2>CLEANING</h2>
+                        <img src="img/cleaning.jpg" alt="To be added" class="services-imgs" />
                     </div>
+                    <br><br><h2>CLEANING</h2>
                     <div class="overlay">
+                        <h3 class="overlay-title">Cleaning</h3>
                         <div class="text">Text to be added</div>
                     </div>
                 </div>
@@ -115,20 +116,22 @@
                 <div class = "space-contact">&nbsp</div>
                 <div class="card-container">
                     <div class="image-container" >
-                            <img src="img/cleaning.jpg" alt="To be added" class="services-imgs" />
-                            <br><br><h2>CLEANING</h2>
+                        <img src="img/cooking.jpg" alt="To be added" class="services-imgs" />
                     </div>
+                    <br><br><h2>COOKING</h2>
                     <div class="overlay">
+                        <h3 class="overlay-title">Cooking</h3>
                         <div class="text">Text to be added</div>
                     </div>
                 </div>
                 <div class = "space-contact">&nbsp</div>
                 <div class="card-container">
                     <div class="image-container" >
-                            <img src="img/cleaning.jpg" alt="To be added" class="services-imgs" />
-                            <br><br><h2>CLEANING</h2>
+                        <img src="img/washing.jpg" alt="To be added" class="services-imgs" />
                     </div>
+                    <br><br><h2>WASHING</h2>
                     <div class="overlay">
+                        <h3 class="overlay-title">Washing</h3>
                         <div class="text">Text to be added</div>
                     </div>
                 </div>
@@ -137,10 +140,8 @@
 
         <div class = "block" id = "register">
             <!-- TODO -->
-            <br><br><br>
             <div class="input-img">
                 <img src="./test.jpg" alt="Add image here">
-                <br><br><br>
                 <h2 class="heading">REGISTER</h2>
                 <br><br>
                 <div class="input-fields">
