--- a/login.html
+++ b/login.html
@@ -12,7 +12,7 @@
         <link href="./css/about.css" rel="stylesheet"/> 
         <link href="./css/contact.css" rel="stylesheet"/>
 		<link href="./css/services.css" rel="stylesheet"/>
-		<link href="/css/login.css" rel="stylesheet"/>
+		<link href="./css/login.css" rel="stylesheet"/>
     </head>	
 	<body>
 		<div>
