--- a/maideasy.html
+++ b/maideasy.html
@@ -12,7 +12,7 @@
         <link href="./css/about.css" rel="stylesheet"/> 
         <link href="./css/contact.css" rel="stylesheet"/>
         <link href="./css/services.css" rel="stylesheet"/>
-        <link href="./css/signup.css" rel="stylesheet"/>   <!--used for both signup and register-->
+        <link href="./css/signup.css" rel="stylesheet"/>   
     </head>
 	<body>
         <div>
