--- a/login.html
+++ b/login.html
@@ -61,11 +61,11 @@
 			</nav>
 		</div>
 		<div class="loginbox">
-			<form action="Vote.php" method="post">
+			<form action="login.php" method="post">
 				<p id="form-label"> Username </p>
-				<input type="email" name="VoterName" placeholder="xyz@example.com" required="email" > <br><br>
+				<input type="text" name="username" placeholder="xyz@example.com" required="text" > <br><br>
 				<p id="form-label"> Password</p>                             
-				<input type="text" name="FavoriteCharacterName" placeholder="Enter Password" required="text"> <br><br> 
+				<input type="text" name="passwd" placeholder="Enter Password" required="text"> <br><br> 
 				<a href="#">Forgot Password?</a><br><br>  
 				<input type="submit" name="Submit" 
 					value="           SUBMIT           " >
