--- a/signup.html
+++ b/signup.html
@@ -65,26 +65,28 @@
             <br>
             <h2 class="heading">SIGN UP</h2>
             <br><br>
-            <div class="input-fields">
-                <label for ="name" class="labels">NAME<span style="color: transparent;">007Space</span></label><input type="text" id="name"><br><br>
-                <label for ="email" class="labels">HOUSE NO.<span style="color: transparent;">007Space</span> </label><input type="number" id="houseno"><br><br>
-                <label for ="type" class="labels"> HELPER NAME <span style="color: transparent;">007Space</span></label><input type="text" id="helper-name"><br><br>
-                <label for ="name" class="labels">WORK TYPE  <span style="color: transparent;">007Space</span></label>    
-                    <select id="worktype-dropdown">
-                        <option>ffbdfv</option>
-                        <option>ffbddbffv</option>
-                        <option>fdfbfbddfv</option>
-                        <option>ffdbfbdfv</option>
-                    </select><br><br>
-                <label for ="name" class="labels">TIME SLOT <span style="color: transparent;">007Space</span></label><input type="text" id="name"><br><br>  <!-- Fill this -->
-                <label for ="name" class="labels">COMMUNITY NAME <span style="color: transparent;">007Space</span></label><input type="text" id="community-name">
-            </div>  
-            <br><br><br><br>
-            <div >
-                <button type="submit" id="register-button" style="float:left; ">
-                    Submit
-                </button>
-            </div>
+            <form action="signup.php" method="POST">
+                <div class="input-fields">
+                    <label for ="name" class="labels">NAME<span style="color: transparent;">007Space</span></label><input type="text" id="name" name="Name"><br><br>
+                    <label for ="email" class="labels">HOUSE NO.<span style="color: transparent;">007Space</span> </label><input type="number" id="houseno" name="Houseno"><br><br>
+                    <label for ="type" class="labels"> HELPER NAME <span style="color: transparent;">007Space</span></label><input type="text" id="helper-name" name="HelperName"><br><br>
+                    <label for ="name" class="labels">WORK TYPE  <span style="color: transparent;">007Space</span></label>    
+                        <select id="worktype-dropdown" name="WorkType">
+                            <option>ffbdfv</option>
+                            <option>ffbddbffv</option>
+                            <option>fdfbfbddfv</option>
+                            <option>ffdbfbdfv</option>
+                        </select><br><br>
+                    <label for ="name" class="labels">TIME SLOT <span style="color: transparent;">007Space</span></label><input type="text" id="name" name="TimeSlot"><br><br>  <!-- Fill this -->
+                    <label for ="name" class="labels">COMMUNITY NAME <span style="color: transparent;">007Space</span></label><input type="text" id="community-name" name="CommunityName">
+                </div>  
+                <br><br><br><br>
+                <div >
+                    <button type="submit" id="register-button" style="float:left; ">
+                        Submit
+                    </button>
+                </div>
+            </form>
         </div>  
     </body>
     <!-- SCRIPTS -->
