--- a/login.html
+++ b/login.html
@@ -65,7 +65,7 @@
 				<p id="form-label"> Username </p>
 				<input type="text" name="username" placeholder="xyz@example.com" required="text" > <br><br>
 				<p id="form-label"> Password</p>                             
-				<input type="text" name="passwd" placeholder="Enter Password" required="text"> <br><br> 
+				<input type="password" name="passwd" placeholder="Enter Password" required="text"> <br><br> 
 				<a href="#">Forgot Password?</a><br><br>  
 				<input type="submit" name="Submit" 
 					value="           SUBMIT           " >
