Fixed alignment on services

--- a/maideasy.html
+++ b/maideasy.html
@@ -99,40 +99,41 @@
         </div>
 
         <div class = "block" id = "services">
-            <!-- TODO -->
-            <br><br><br><br>
-            <div class="services-container">
-                <div class="card-container">
-                    <div class="image-container" >
-                        <img src="img/cleaning.jpg" alt="To be added" class="services-imgs" />
+            <div class = "temp-dark">
+                <br><br><br><br>
+                <div class="services-container">
+                    <div class="card-container">
+                        <div class="image-container" >
+                            <img src="img/cleaning.jpg" alt="To be added" class="services-imgs" />
+                        </div>
+                        <br><br><h2>CLEANING</h2>
+                        <div class="overlay">
+                            <h3 class="overlay-title">Cleaning</h3>
+                            <div class="text">Text to be added</div>
+                        </div>
                     </div>
-                    <br><br><h2>CLEANING</h2>
-                    <div class="overlay">
-                        <h3 class="overlay-title">Cleaning</h3>
-                        <div class="text">Text to be added</div>
+                        
+                    <div class = "space-contact">&nbsp</div>
+                    <div class="card-container">
+                        <div class="image-container" >
+                            <img src="img/cooking.jpg" alt="To be added" class="services-imgs" />
+                        </div>
+                        <br><br><h2>COOKING</h2>
+                        <div class="overlay">
+                            <h3 class="overlay-title">Cooking</h3>
+                            <div class="text">Text to be added</div>
+                        </div>
                     </div>
-                </div>
-                     
-                <div class = "space-contact">&nbsp</div>
-                <div class="card-container">
-                    <div class="image-container" >
-                        <img src="img/cooking.jpg" alt="To be added" class="services-imgs" />
-                    </div>
-                    <br><br><h2>COOKING</h2>
-                    <div class="overlay">
-                        <h3 class="overlay-title">Cooking</h3>
-                        <div class="text">Text to be added</div>
-                    </div>
-                </div>
-                <div class = "space-contact">&nbsp</div>
-                <div class="card-container">
-                    <div class="image-container" >
-                        <img src="img/washing.jpg" alt="To be added" class="services-imgs" />
-                    </div>
-                    <br><br><h2>WASHING</h2>
-                    <div class="overlay">
-                        <h3 class="overlay-title">Washing</h3>
-                        <div class="text">Text to be added</div>
+                    <div class = "space-contact">&nbsp</div>
+                    <div class="card-container">
+                        <div class="image-container" >
+                            <img src="img/washing.jpg" alt="To be added" class="services-imgs" />
+                        </div>
+                        <br><br><h2>WASHING</h2>
+                        <div class="overlay">
+                            <h3 class="overlay-title">Washing</h3>
+                            <div class="text">Text to be added</div>
+                        </div>
                     </div>
                 </div>
             </div>
