fixed signup page

--- a/signup.html
+++ b/signup.html
@@ -59,15 +59,14 @@
                 </div>
             </nav>
         </div>
-        <br><br><br>
         <div class="input-img">
-            <img src="./test.jpg" alt="Add image here">
-            <br>
+            <!--<img src="./test.jpg" alt="Add image here">  -->
             <h2 class="heading">SIGN UP</h2>
             <br><br>
             <form action="signup.php" method="POST">
                 <div class="input-fields">
-                    <label for ="name" class="labels">NAME<span style="color: transparent;">007Space</span></label><input type="text" id="name" name="Name"><br><br>
+                    <label for ="name" class="labels">USERNAME<span style="color: transparent;">007Space</span></label><input type="text" id="name" name="Name"><br><br>
+                    <label for ="password" class="labels">PASSWORD<span style="color: transparent;">007Space</span></label><input type="text" id="password" name="Password"><br><br>
                     <label for ="email" class="labels">HOUSE NO.<span style="color: transparent;">007Space</span> </label><input type="number" id="houseno" name="Houseno"><br><br>
                     <label for ="type" class="labels"> HELPER NAME <span style="color: transparent;">007Space</span></label><input type="text" id="helper-name" name="HelperName"><br><br>
                     <label for ="name" class="labels">WORK TYPE  <span style="color: transparent;">007Space</span></label>    
@@ -80,7 +79,7 @@
                     <label for ="name" class="labels">TIME SLOT <span style="color: transparent;">007Space</span></label><input type="text" id="name" name="TimeSlot"><br><br>  <!-- Fill this -->
                     <label for ="name" class="labels">COMMUNITY NAME <span style="color: transparent;">007Space</span></label><input type="text" id="community-name" name="CommunityName">
                 </div>  
-                <br><br><br><br>
+                <br>
                 <div >
                     <button type="submit" id="register-button" style="float:left; ">
                         Submit
