--- a/login.html
+++ b/login.html
@@ -72,7 +72,7 @@
 			</form>
 			<div>
 				<p style="color:white" id="create-account"> Don't have an account yet?
-				<br> <a href="#" id="create-account">Create an Account</a></p>
+				<br> <a href="signup.html" id="create-account">Create an Account</a></p>
 			</div>
 		</div>	
 	</body>
