--- a/maideasy.html
+++ b/maideasy.html
@@ -76,6 +76,7 @@
         </div>
         <!-- End of Home -->
 
+        <!-- About US -->
         <div class = "block parallax block1" id = "about">
 
             <!-- <div align = "center"  style="height:400px;background-color:rgba(255, 115, 0, 0.479);font-size:16px;margin-block-start: 200px;">
@@ -97,7 +98,9 @@
 
 
         </div>
+        <!-- End of About US -->
 
+        <!-- Services -->
         <div class = "block" id = "services">
             <div class = "temp-dark">
                 <br><br><br><br>
@@ -138,10 +141,11 @@
                 </div>
             </div>
         </div>
+        <!-- End of services -->
 
+        <!-- Register -->
         <div class = "block" id = "register">
-            <!-- TODO -->
-            <div class="input-img">
+            <!-- <div class="input-img">
                 <img src="./test.jpg" alt="Add image here">
                 <h2 class="heading">REGISTER</h2>
                 <br><br>
@@ -156,8 +160,10 @@
                         Submit
                     </button>
                 </div>
-            </div>
-        </div>
+            </div> -->
+        </div> 
+        <!-- End of Register -->
+
         <div class = "contact-bg">
             <div class = "block" id = "contact" style="color: white;">
                 <div class = "container" style = "display: flex;">
