--- a/register.html
+++ b/register.html
@@ -65,23 +65,23 @@
                             <form id = "register-form">
                                 <div id = "register-fields">
                                     <div class = "fields">
-                                        <div>NAME</div>
+                                        <div>COMMUNITY NAME</div>
                                         <div>&nbsp</div>
-                                        <div>EMAIL ID</div>
+                                        <div>COMMUNITY EMAIL</div>
                                         <div>&nbsp</div>
-                                        <div>TYPE</div>
+                                        <div>COMMUNITY TYPE</div>
                                     </div>
                                     <div class = "inputs">
-                                        <input class = "input-box" type="text" name="name">
+                                        <input class = "input-box" type="text" name="community-name">
                                         <div>&nbsp</div>
-                                        <input class = "input-box" type="text" name="email">
+                                        <input class = "input-box" type="text" name="community-email">
                                         <div>&nbsp</div>
                                         <div class = "community">
-                                            <input class = "rad" type="radio" name = "community-type" value="Apartment" checked> Apartment  
+                                            <input class = "rad" type="radio" name = "community-type" value="apartment" checked> Apartment  
                                             <br>
-                                            <input class = "rad" type="radio" name = "community-type" value="Gated"> Gated Community
+                                            <input class = "rad" type="radio" name = "community-type" value="gated"> Gated Community
                                             <br>
-                                            <input class = "rad" type="radio" name = "community-type" value="Independent"> Independent House  
+                                            <input class = "rad" type="radio" name = "community-type" value="independent"> Independent House  
                                             <br>
                                         </div>
                                     </div>
@@ -96,9 +96,9 @@
                             </form>
                     </div>
                     <div class = "space-register">&nbsp</div>
-                    <!-- GOOGLE MAP LOCTAION OF COLLEGE -->
-                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3888.5831053856305!2d77.53232771477025!3d12.934494790880208!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3bae3e468d8d36d3%3A0x694d74f6ac640acf!2sPES%20University!5e0!3m2!1sen!2sin!4v1571836525650!5m2!1sen!2sin"></iframe>
+                    <img src = "img/apartment.jpg" id = "image">
                 </div>
             </div>
         </div>
 </body>
+<script src="lib/register.js"></script>
