Renamed register to register side

--- a/register_side.html
+++ b/register_side.html
@@ -5,7 +5,7 @@
 
     <!-- NAVBAR STYLESHEET -->
     <link href="./css/navbar.css" rel="stylesheet"/>
-    <link href="./css/register.css" rel="stylesheet"/>
+    <link href="./css/register_side.css" rel="stylesheet"/>
     <link href="lib/bootstrap.min.css" rel="stylesheet"/>
 </head>
 <body>
@@ -101,4 +101,4 @@
             </div>
         </div>
 </body>
-<script src="lib/register.js"></script>
+<script src="lib/register_side.js"></script>
